# ansible-role-rhel_template_build

./: .ansible-lint  .gitignore  .yamllint  AI_AUTOMATION.md  AI_CONFIGURATION_GUIDE.md  AUTOMATION_QUICK_REFERENCE.md  CHANGELOG.md  LICENSE  README.md  RELEASE.md  TESTING.md  pyproject.toml  requirements-dev.txt  requirements.txt  test-locally.sh
.github/scripts/: ai_config.yml  ai_doc_updater.py  ai_pr_analyzer.py  ai_pr_assistant.py  ai_release_analyzer.py  ai_utils.py  requirements.txt  requirements.yml  update_changelog.py
.github/workflows/: auto-release.yml  ci.yml  debug-release.yml  docs-ci.yml  galaxy.yml  post-release-updates.yml  pr-enrichment.yml  vm-test.yml
defaults/: main.yml
meta/: main.yml
molecule/default/: Dockerfile.j2  ansible.cfg  converge.yml  molecule.yml  prepare.yml  requirements.yml  verify.yml
molecule/tart/: README.md  converge.yml  create.yml  destroy.yml  molecule.yml  prepare.yml  verify.yml
molecule/vagrant/: converge.yml  molecule.yml
scripts/: release.sh  setup-automation.sh
tasks/: cloud-init.yml  grow_part.yml  main.yml  ovirt.yml  parallels.yml  selinux.yml  tart.yml  virtualbox.yml  vmware-tools.yml  vmware.yml
templates/: 01-growpart.cfg.j2  01_growpart.cfg.j2  grow_part.sh.j2
tests/: test.yml
