[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ansible-role-rhel-template-build"
version = "1.0.0"
description = "Ansible role to configure RHEL/CentOS for VM template creation"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Orcun Atakan", email = ""}
]
keywords = ["ansible", "rhel", "centos", "vmware", "template", "cloud"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
    "Topic :: System :: Installation/Setup",
]
requires-python = ">=3.8"

# Runtime dependencies (minimal for the role itself)
dependencies = [
    "ansible-core>=2.14,<2.17",
]

[project.optional-dependencies]
# Development dependencies
dev = [
    "ansible-lint>=6.0.0",
    "yamllint>=1.26.0",
    "molecule>=6.0.0",
    "molecule-plugins[docker]>=23.0.0",
    "pytest>=6.0.0",
    "pytest-testinfra>=6.0.0",
    "docker>=6.0.0",
    "rich>=10.0.0",
]

# Testing dependencies
test = [
    "molecule>=6.0.0",
    "molecule-plugins[docker]>=23.0.0",
    "pytest>=6.0.0",
    "pytest-testinfra>=6.0.0",
    "docker>=6.0.0",
]

# Linting dependencies
lint = [
    "ansible-lint>=6.0.0",
    "yamllint>=1.26.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "flake8>=4.0.0",
]

# Documentation dependencies
docs = [
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
]

# All development dependencies combined
all = [
    "ansible-role-rhel-template-build[dev,test,lint,docs]",
    "pre-commit>=2.15.0",
    "bump2version>=1.0.0",
    "safety>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/oatakan/ansible-role-rhel_template_build"
Repository = "https://github.com/oatakan/ansible-role-rhel_template_build"
Documentation = "https://github.com/oatakan/ansible-role-rhel_template_build#readme"
"Bug Tracker" = "https://github.com/oatakan/ansible-role-rhel_template_build/issues"

[tool.setuptools]
packages = []  # This is an Ansible role, not a Python package

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | molecule
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["ansible"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["."]
omit = [
    "*/venv/*",
    "*/virtualenv/*",
    "*/.tox/*",
    "*/tests/*",
    "*/molecule/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "ansible.*"
ignore_missing_imports = true